extends Node
var b4_1 = 0
var b4_2 = 0
var b4_3 = 0
var b4_4 = 0

# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass


func _on_button_1_pressed():
	if b4_1 == 1:
		b4_1=0
	else:
		b4_1=1
	pass # Replace with function body.


func _on_button_2_pressed():
	if b4_2 == 1:
		b4_2=0
	else:
		b4_2=1
	pass # Replace with function body.


func _on_button_3_pressed():
	if b4_3 == 1:
		b4_3=0
	else:
		b4_3=1
	pass # Replace with function body.


func _on_button_4_pressed():
	if b4_4 == 1:
		b4_4=0
	else:
		b4_4=1
	pass # Replace with function body.
